# backend_async_api

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
async_api_service/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
async_api_service/envs/: dev.local.env  prod.env  test.env  test.local.env
async_api_service/src/: main.py
async_api_service/src/api/v1/: __init__.py  films.py  genres.py  persons.py  schemes.py
async_api_service/src/core/: config.py  logger.py
async_api_service/src/db/: search_engine.py  storage.py
async_api_service/src/messages/: exceptions.py
async_api_service/src/models/: film.py  person.py
async_api_service/src/services/: base.py  film.py  genres.py  person.py  search_engine_service.py  storage_service.py
async_api_service/src/utils/: decorators.py
async_api_service/tests/functional/: conftest.py  docker-compose.yml  pyproject.toml  settings.py
async_api_service/tests/functional/src/: test_films.py  test_genres.py  test_persons.py
async_api_service/tests/functional/testdata/: data.py  schemas_elastic.py
async_api_service/tests/functional/testsupport/: elastic.py  redis.py  request.py
async_api_service/tests/functional/utils/: decorators.py  wait_for_es.py  wait_for_redis.py
movie_manager/: README.md  docker-compose.dev.elastic.yml  docker-compose.yml
movie_manager/ELK_etl/: Dockerfile  UpdateByTablePipelineDockerfile  entrypoint.sh  main.py  pyproject.toml  update_by_table_pipeline.py  update_by_table_pipeline_entrypoint.sh
movie_manager/ELK_etl/core/: variables.py
movie_manager/ELK_etl/models/: pydentic_models.py
movie_manager/ELK_etl/scripts/: create_index.sh  update_settings.sh
movie_manager/ELK_etl/services/: elasticsearch.py  orm.py
movie_manager/ELK_etl/utils/: decorators.py  elastic_prepared_json.py  storage.py
movie_manager/app/: Dockerfile  entrypoint.sh  pyproject.toml
movie_manager/envs/: dev.local.env  (+1 more)
(+28 files in other folders)
