[tool.poetry]
name = "async-api-service-tests"
version = "0.1.0"
description = ""
authors = ["Dmitrii Stepanov <StepanovD.Work@yandex.ru>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
redis = "^4.4.2"
aiohttp = "^3.8.3"
elasticsearch = {version = "7.9.1", extras = ["async"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
